Добавил популярные товары через контекст

--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -81,36 +82,7 @@
 					<h2>Похожие продукты</h2>
 					<a class="explore" href="#">показать все <img src="{% static '/mainapp/img/arrow.png' %}" alt=""></a>
 				</div>
-				<div class="related-products clearfix">
-					<div class="block">
-						<a href="#"><img src="{% static '/mainapp/img/product-11.jpg' %}" alt="">
-							<div class="text">
-								<img src="{% static '/mainapp/img/icon-hover.png' %}" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-					<div class="block">
-						<a href="#"><img src="{% static '/mainapp/img/product-21.jpg ' %}" alt="">
-							<div class="text">
-								<img src="{% static '/mainapp/img/icon-hover.png' %}" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-					<div class="block">
-						<a href="#"><img src="{% static '/mainapp/img/product-31.jpg' %}" alt="">
-							<div class="text">
-								<img src="{% static '/mainapp/img/icon-hover.png' %}" alt="img">
-								<h4>Стул повышенного качества</h4>
-								<p>Не оторваться. </p>
-							</div>
-						</a>
-					</div>
-
-				</div>
+				{% include 'includes/inc_product.html' %}
 			</div>
 		</div>
 
@@ -118,32 +90,6 @@
 
 	</div>	
 
-	<div class="footer">
-        <div class="clearfix">
-            <div class="text-footer">
-                <h3>контакты</h3>
-            </div>
-            <div class="text-footer">
-                <h3>полезная информация</h3>
-            </div>
-            <div class="text-footer clearfix">
-                <h3>Оставайтесь на связи</h3>
-                <p>Подписаться на новости и рассылки</p>
-                <form>
-                    <input type="email" name="email" placeholder="ваш email">
-                    <a href="#"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
-                </form>
-            </div>
-        </div>
-        <p class="small">&copy; GB 2017</p>
-        <div class="social">
-            <a href="#" class="social1"></a>
-            <a href="#" class="social2"></a>
-            <a href="#" class="social3"></a>
-            <a href="#" class="social4"></a>
-        </div>
-        <p class="small">Положения &amp; Условия  /  Конфиденциальность &amp; Cookies</p>
-    </div>	
-
+{% include 'includes/inc_footer.html' %}
 </body>
 </html>
