Добавил похожие продукты через контекст

--- a/geekshop/templates/index.html
+++ b/geekshop/templates/index.html
@@ -31,7 +31,7 @@
 		<div class="block">
 			<a href="#"><img src="{% static tab.href %}" alt="{{tab.name}}">
 				<div class="text">
-					<img src="{% static '/img/icon-hover.png' %}" alt="img">
+					<img src="{% static tab.icon_hover %}" alt="img">
 					<h4>{{tab.name}}</h4>
 					<p>Расположитесь комфортно. </p>
 				</div>
