Добавил контакты через контекст

--- a/geekshop/templates/contact.html
+++ b/geekshop/templates/contact.html
@@ -23,54 +23,25 @@
 		</div>
 
 		<div class="location">
+			{% for loc in location_content %}
 			<div class="location-1">
 				<i class="fa fa-map-marker fa-5x"></i>
-				<h4>Москва</h4>
+				<h4>{{loc.city}}</h4>
 				<div class="contacts">
 					<h5>Телефон</h5>
-					<p>+7-888-888-8888</p>
+					<p>{{loc.tel}}</p>
 				</div>
 				<div class="contacts">
 					<h5>Email</h5>
-					<p>info@geekshop.ru</p>
+					<p>{{loc.email}}</p>
 				</div>
 				<div class="contacts">
 					<h5>Адрес</h5>
-					<p>В пределах МКАД</p>
+					<p>{{loc.adress}}</p>
 				</div>
 			</div>
-			<div class="location-1">
-				<i class="fa fa-map-marker fa-5x"></i>
-				<h4>Москва</h4>
-				<div class="contacts">
-					<h5>Телефон</h5>
-					<p>+7-888-888-8888</p>
-				</div>
-				<div class="contacts">
-					<h5>Email</h5>
-					<p>info@geekshop.ru</p>
-				</div>
-				<div class="contacts">
-					<h5>Адрес</h5>
-					<p>В пределах МКАД</p>
-				</div>
-			</div>
-			<div class="location-1">
-				<i class="fa fa-map-marker fa-5x"></i>
-				<h4>Москва</h4>
-				<div class="contacts">
-					<h5>Телефон</h5>
-					<p>+7-888-888-8888</p>
-				</div>
-				<div class="contacts">
-					<h5>Email</h5>
-					<p>info@geekshop.ru</p>
-				</div>
-				<div class="contacts">
-					<h5>Адрес</h5>
-					<p>В пределах МКАД</p>
-				</div>
-			</div>
+			{% endfor %}
+
 		</div>
 
 		<div class="clr"></div>
