update home work lesson 3
Выполнено:
1. Настроить проект для работы с медиафайлами.
2. Создать модели в проекте (обязательно должно быть поле с изображениями) и выполнить миграции.
3. Поработать с моделями в консоли.
4. Создать суперпользователя. Настроить админку и поработать в ней.
5. Организовать работу с моделями в контроллерах и шаблонах.
6. Реализовать автоматическое формирование меню категорий по данным из модели.
7. *Создать диспетчер URL в приложении. Скорректировать динамические URL-адреса в шаблонах. Поработать с имитацией переходов по категориям в адресной строке браузера.

--- a/geekshop/templates/index.html
+++ b/geekshop/templates/index.html
@@ -27,13 +27,14 @@
 	</div>
 
 	<div class="tab-content">
-		{% for tab in tab_content %}
+		{% for product in products %}
 		<div class="block">
-			<a href="#"><img src="{% static tab.href %}" alt="{{tab.name}}">
+			<a href="#"><img src="/media/{{ product.image }}" alt="{{ product.short_desc }}" style="width: 250px;">
 				<div class="text">
-					<img src="{% static tab.icon_hover %}" alt="img">
-					<h4>{{tab.name}}</h4>
-					<p>Расположитесь комфортно. </p>
+					<img src="static/img/icon-hover.png" alt="img">
+
+					<h4>{{ product.name }}</h4>
+					<p>{{ product.short_desc }}</p>
 				</div>
 			</a>
 		</div>
