--- a/geekshop/templates/index.html
+++ b/geekshop/templates/index.html
@@ -12,37 +12,32 @@
 		<h3 class="green">тенденции {% now "Y" %}</h3>
 		<h3 class="big"> удобные стулья</h3>
 		<p>Новый уровень комфорта. Отличные характеристики.</p>
-		<a href="#" class="button-order">заказать <img src="{% static '/img/arrow.png' %}" alt=""></a>
+		<a href="#" class="button-order">заказать <img src="static/img/arrow.png" alt=""></a>
 	</div>
 	<div class="navi">
 		<a href="#"></a><a href="#"></a><a href="#"></a>
 	</div>
 </div>
+
 <div class="featured">
 	<div class="featured-menu">
 			<a class="active" href="#">Популярные</a><a href="#">Новинки</a>
 	</div>
-	<a class="explore" href="#">показать все <img src=" {% static '/img/arrow.png' %}" alt=""></a>
+	<a class="explore" href="#">показать все <img src="static/img/arrow.png" alt=""></a>
 	<div class="clearfix">
 	</div>
-
 	<div class="tab-content">
 		{% for product in products %}
 		<div class="block">
-			<a href="#"><img src="/media/{{ product.image }}" alt="{{ product.short_desc }}" style="width: 250px;">
+			<a href="#"><img src="/media/{{ product.image }}" alt="{{ product.short_desc }}" style="width: 200px;">
 				<div class="text">
 					<img src="static/img/icon-hover.png" alt="img">
-
 					<h4>{{ product.name }}</h4>
 					<p>{{ product.short_desc }}</p>
 				</div>
 			</a>
 		</div>
 		{% endfor %}
-
-
-
-
-
+	</div>
 </div>
 {% endblock %}
