--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -25,16 +25,24 @@
 			</div>
 		</div>
 
-		<div class="details">
-			<div class="links clearfix">
-					<ul class="links-menu">
-						{% for link in links_menu %}
-							<li><a href="/">{{link.name}}</a></li>
-						{% endfor %}
-					</ul>
-				</div>
+	<div class="details">
+		<div class="links clearfix">
+			<ul class="links-menu">
+				  <li>
+					<a href="{% url 'products:products' 0 %}"
+					   class="{% if not request.resolver_match.kwargs.pk %}
+								active
+							  {% endif %}">
+					  все
+					</a>
+				  </li>
+				{% for link in links_menu %}
+					<li><a href="{% url 'products:products' pk=link.pk %}" {% if request.resolver_match.kwargs.pk == link.pk %} class="active" {% endif %}>{{link.name}}</a></li>
+				{% endfor %}
+			</ul>
+		</div>
 
-			<div class="details-products">
+<!--			<div class="details-products">
 				<div class="details-slider">
 					<div class="slider-product">
 						<img src="{% static '/mainapp/img/slider1.jpg' %}">
@@ -66,14 +74,39 @@
 						заказать <i class="fa fa-chevron-right" aria-hidden="true"></i>
 					</a>
 					<div class="description-text">
-						<p>Расположитесь комфортно.</p> 
+						<p>Расположитесь комфортно.</p>
 						<p>Отличное качество материалов
-						позволит вам это.</p> 
+						позволит вам это.</p>
 						<p>Различные цвета</p>
 						<p>высочайший уровень
 						эргономики и прочность.</p>
 					</div>
 				</div>
+			</div>
+
+
+-->
+			<div>
+				{% if category %}
+				<h2>Категория: {{ category.name|title }}</h2>
+				{% endif %}
+
+			</div>
+			<div class="product_category">
+				{% for product in products %}
+					<div class="block w-25 my-3 mx-3">
+
+					  <a href="{% url 'basket:add' product.pk %}">
+
+						<img src="/media/{{ product.image }}" alt="{{ product.short_desc }}">
+						<div class="text">
+						  <img src="{% static 'img/icon-hover.png' %}" alt="hover">
+						  <h4>{{ product.name }}</h4>
+						  <p>{{ product.description }} </p>
+						</div>
+					  </a>
+					</div>
+				{% endfor %}
 			</div>
 
 			<div class="related">
